apps/crypt-pit/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypt-pit
  namespace: apps
spec:
  selector:
    app: crypt-pit
  ports:
    - port: 80
      targetPort: 80
